--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -28,7 +28,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:v0.9.0
+  image: pingcap/chaos-mesh:latest
   imagePullPolicy: IfNotPresent
 
   nameOverride: ""
@@ -61,7 +61,7 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:v0.9.0
+  image: pingcap/chaos-daemon:latest
   imagePullPolicy: IfNotPresent
   grpcPort: 31767
   httpPort: 31766
@@ -103,7 +103,7 @@ dashboard:
 
   serviceAccount: chaos-controller-manager
 
-  image: pingcap/chaos-dashboard:v0.9.0
+  image: pingcap/chaos-dashboard:latest
   imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
@@ -264,7 +264,7 @@ webhook:
 
 bpfki:
   create: false
-  image: pingcap/chaos-kernel:v0.9.0
+  image: pingcap/chaos-kernel:latest
   imagePullPolicy: IfNotPresent
   grpcPort: 50051
   resources: {}
