update template && minor fix
Signed-off-by: xiang <xiang13225080@163.com>

--- a/helm/chaos-mesh/templates/dns-configmap.yaml
+++ b/helm/chaos-mesh/templates/dns-configmap.yaml
@@ -18,12 +18,11 @@ data:
             lameduck 5s
         }
         ready
-        kubernetes cluster.local in-addr.arpa ip6.arpa {
+        k8s_dns_chaos cluster.local in-addr.arpa ip6.arpa {
             pods insecure
             fallthrough in-addr.arpa ip6.arpa
             ttl 30
         }
-        prometheus :9153
         forward . /etc/resolv.conf {
             max_concurrent 1000
         }
