--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -28,7 +28,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:v0.9.0
+  image: pingcap/chaos-mesh:latest
   imagePullPolicy: IfNotPresent
 
   nameOverride: ""
@@ -61,7 +61,7 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:v0.9.0
+  image: pingcap/chaos-daemon:latest
   imagePullPolicy: IfNotPresent
   grpcPort: 31767
   httpPort: 31766
@@ -101,7 +101,7 @@ dnsServer:
 
   serviceAccount: chaos-dns-server
   
-  image: coredns/coredns:latest # TODO: use image build with plugin k8s_dns_chaos
+  image: pingcap/coredns:latest
   
   imagePullPolicy: Always
 
@@ -123,7 +123,7 @@ dnsServer:
       cpu: 100m
       memory: 70Mi
     
-    tolerations: []
+  tolerations: []
 
   env:
     LISTEN_HOST: "0.0.0.0"
@@ -136,7 +136,8 @@ dashboard:
 
   serviceAccount: chaos-controller-manager
 
-  image: pingcap/chaos-dashboard:v0.9.0
+  image: pingcap/chaos-dashboard:latest
+
   imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
