add HTTPchaos CRD API
Signed-off-by: Andrewmatilde <davis6813585853062@outlook.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -81,6 +81,7 @@ rules:
     - kernelchaos
     - stresschaos
     - podnetworkchaos
+    - httpchaos
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -148,6 +149,7 @@ rules:
   - kernelchaos
   - stresschaos
   - podnetworkchaos
+  - httpchaos
   verbs: ["*"]
 ---
 kind: RoleBinding
