feat: add hostNetwork option for controller-manager and update doc accordingly.
Signed-off-by: colstuwjx <colstuwjx@gmail.com>

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -28,6 +28,9 @@ spec:
 {{ toYaml . | indent 8 }}
     {{- end }}
     spec:
+    {{- if .Values.controllerManager.hostNetwork }}
+      hostNetwork: true
+    {{- end }}
     {{- if .Values.controllerManager.serviceAccount }}
       serviceAccount: {{ .Values.controllerManager.serviceAccount }}
     {{- end }}
