feat(controller-manager): split out namespaces for running controller and injecting chaos
Signed-off-by: STRRL <str_ruiling@outlook.com>

--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -37,6 +37,10 @@ controllerManager:
   allowedNamespaces: ""
   ignoredNamespaces: ""
 
+  # targetNamespace only works with clusterScoped is false(namespace scoped mode).
+  # It means namespace which will be injected chaos
+  targetNamespace: chaos-testing
+
   service:
     type: ClusterIP
 
