--- a/examples/etcd/etcd-iochaos.yaml
+++ b/examples/etcd/etcd-iochaos.yaml
@@ -10,5 +10,9 @@ spec:
     labelSelectors:
       app: etcd
   volumePath: /var/run/etcd
-  delay: "20ms"
-  percent: 10
+  delay: "100ms"
+  percent: 50
+  duration: "400s"
+  scheduler:
+    cron: "@every 10m"
+
