--- a/examples/io-delay-example.yaml
+++ b/examples/io-delay-example.yaml
@@ -4,14 +4,15 @@ metadata:
   name: io-delay-example
   namespace: chaos-testing
 spec:
-  action: delay
+  action: latency
   mode: one
-  duration: "400s"
-  path: ""
   selector:
     labelSelectors:
-      "app.kubernetes.io/component": "tikv"
-  layer: "fs"
+      app: etcd
+  volumePath: /var/run/etcd
+  path: /var/run/etcd/**/*
   delay: "10ms"
+  percent: 10
+  duration: "400s"
   scheduler:
     cron: "@every 10m"
