--- a/examples/io-errno-example.yaml
+++ b/examples/io-errno-example.yaml
@@ -4,14 +4,15 @@ metadata:
   name: io-errno-example
   namespace: chaos-testing
 spec:
-  action: errno
+  action: fault
   mode: one
-  duration: "400s"
-  path: ""
   selector:
     labelSelectors:
-      "app.kubernetes.io/component": "tikv"
-  layer: "fs"
-  percent: "50"
+      app: etcd
+  volumePath: /var/run/etcd
+  path: /var/run/etcd/**/*
+  errno: 5
+  percent: 50
+  duration: "400s"
   scheduler:
     cron: "@every 10m"
