chore(helm): fix a typo
Signed-off-by: STRRL <str_ruiling@outlook.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -142,7 +142,7 @@ roleRef:
   name: {{ .Release.Name }}:chaos-controller-manager-target-namespace
 subjects:
   - kind: ServiceAccount
-    name: s{{ .Values.controllerManager.serviceAccount }}
+    name: {{ .Values.controllerManager.serviceAccount }}
     namespace: {{ .Release.Namespace }}
 {{- end }}
 
