--- a/images/chaos-dashboard/Dockerfile
+++ b/images/chaos-dashboard/Dockerfile
@@ -2,6 +2,10 @@ FROM debian:buster-slim
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
+
+ENV http_proxy $HTTP_PROXY
+ENV https_proxy $HTTPS_PROXY
+
 ARG UI
 ARG SWAGGER
 
