--- a/images/chaos-dashboard/Dockerfile
+++ b/images/chaos-dashboard/Dockerfile
@@ -11,4 +11,7 @@ ARG SWAGGER
 
 RUN apt-get update && apt-get install tzdata -y && rm -rf /var/lib/apt/lists/*
 
+ENV http_proxy=
+ENV https_proxy=
+
 COPY --from=pingcap/chaos-binary /bin/chaos-dashboard /usr/local/bin/chaos-dashboard
