--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -104,7 +104,7 @@ dnsServer:
   
   image: pingcap/coredns:latest
   
-  imagePullPolicy: Always
+  imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
   
