--- a/config/crd/bases/chaos-mesh.org_kernelchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_kernelchaos.yaml
@@ -246,6 +246,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            failedMessage:
+              type: string
             phase:
               description: Phase is the chaos status.
               type: string
