--- a/config/crd/bases/chaos-mesh.org_stresschaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_stresschaos.yaml
@@ -224,6 +224,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            failedMessage:
+              type: string
             instances:
               additionalProperties:
                 description: StressInstance is an instance generates stresses
