--- a/config/crd/bases/chaos-mesh.org_httpchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_httpchaos.yaml
@@ -219,6 +219,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            failedMessage:
+              type: string
             phase:
               description: Phase is the chaos status.
               type: string
