--- a/config/crd/bases/chaos-mesh.org_iochaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_iochaos.yaml
@@ -228,6 +228,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            failedMessage:
+              type: string
             phase:
               description: Phase is the chaos status.
               type: string
