--- a/config/crd/bases/chaos-mesh.org_networkchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_networkchaos.yaml
@@ -390,6 +390,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            failedMessage:
+              type: string
             phase:
               description: Phase is the chaos status.
               type: string
