--- a/config/crd/bases/chaos-mesh.org_podchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_podchaos.yaml
@@ -203,6 +203,8 @@ spec:
                   format: date-time
                   type: string
               type: object
+            failedMessage:
+              type: string
             phase:
               description: Phase is the chaos status.
               type: string
