--- a/config/crd/bases/chaos-mesh.org_httpchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_httpchaos.yaml
@@ -6,18 +6,18 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
-  name: kernelchaos.chaos-mesh.org
+  name: httpchaos.chaos-mesh.org
 spec:
   group: chaos-mesh.org
   names:
-    kind: KernelChaos
-    listKind: KernelChaosList
-    plural: kernelchaos
-    singular: kernelchaos
+    kind: HTTPChaos
+    listKind: HTTPChaosList
+    plural: httpchaos
+    singular: httpchaos
   scope: Namespaced
   validation:
     openAPIV3Schema:
-      description: KernelChaos is the Schema for the kernelchaos API
+      description: HTTPChaos is the Schema for the HTTPchaos API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -32,79 +32,49 @@ spec:
         metadata:
           type: object
         spec:
-          description: Spec defines the behavior of a kernel chaos experiment
           properties:
-            duration:
-              description: Duration represents the duration of the chaos action
+            action:
+              description: 'Action defines the specific pod chaos action. Supported
+                action: delay | abort | mixed Default action: delay'
+              enum:
+              - delay
+              - abort
+              - mixed
               type: string
-            failKernRequest:
-              description: FailKernRequest defines the request of kernel injection
-              properties:
-                callchain:
-                  description: 'Callchain indicate a special call chain, such as:     ext4_mount       ->
-                    mount_subtree          -> ...             -> should_failslab With
-                    an optional set of predicates and an optional set of parameters,
-                    which used with predicates. You can read call chan and predicate
-                    examples from https://github.com/chaos-mesh/bpfki/tree/develop/examples
-                    to learn more. If no special call chain, just keep Callchain empty,
-                    which means it will fail at any call chain with slab alloc (eg:
-                    kmalloc).'
-                  items:
-                    description: Frame defines the function signature and predicate
-                      in function's body
-                    properties:
-                      funcname:
-                        description: Funcname can be find from kernel source or `/proc/kallsyms`,
-                          such as `ext4_mount`
-                        type: string
-                      parameters:
-                        description: Parameters is used with predicate, for example,
-                          if you want to inject slab error in `d_alloc_parallel(struct
-                          dentry *parent, const struct qstr *name)` with a special
-                          name `bananas`, you need to set it to `struct dentry *parent,
-                          const struct qstr *name` otherwise omit it.
-                        type: string
-                      predicate:
-                        description: Predicate will access the arguments of this Frame,
-                          example with Parameters's, you can set it to `STRNCMP(name->name,
-                          "bananas", 8)` to make inject only with it, or omit it to
-                          inject for all d_alloc_parallel call chain.
-                        type: string
-                    type: object
-                  type: array
-                failtype:
-                  description: 'FailType indicates what to fail, can be set to ''0''
-                    / ''1'' / ''2'' If `0`, indicates slab to fail (should_failslab)
-                    If `1`, indicates alloc_page to fail (should_fail_alloc_page)
-                    If `2`, indicates bio to fail (should_fail_bio) You can read:   1.
-                    https://www.kernel.org/doc/html/latest/fault-injection/fault-injection.html   2.
-                    http://github.com/iovisor/bcc/blob/master/tools/inject_example.txt
-                    to learn more'
-                  format: int32
-                  maximum: 2
-                  minimum: 0
-                  type: integer
-                headers:
-                  description: 'Headers indicates the appropriate kernel headers you
-                    need. Eg: "linux/mmzone.h", "linux/blkdev.h" and so on'
-                  items:
+            duration:
+              description: Duration represents the duration of the chaos action. It
+                is required when the action is `PodFailureAction`. A duration string
+                is a possibly signed sequence of decimal numbers, each with optional
+                fraction and a unit suffix, such as "300ms", "-1.5h" or "2h45m". Valid
+                time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
+              type: string
+            headers:
+              description: Specifies how the header match will be performed to route
+                the request.
+              items:
+                properties:
+                  exact_match:
                     type: string
-                  type: array
-                probability:
-                  description: Probability indicates the fails with probability. If
-                    you want 1%, please set this field with 1.
-                  format: int32
-                  maximum: 100
-                  minimum: 0
-                  type: integer
-                times:
-                  description: Times indicates the max times of fails.
-                  format: int32
-                  minimum: 0
-                  type: integer
-              required:
-              - failtype
-              type: object
+                  invert_match:
+                    type: string
+                  name:
+                    type: string
+                  prefix_match:
+                    type: string
+                  present_match:
+                    type: string
+                  range_match:
+                    type: string
+                  regex_match:
+                    type: string
+                  safe_regex_match:
+                    type: string
+                  suffix_match:
+                    type: string
+                required:
+                - name
+                type: object
+              type: array
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
@@ -115,9 +85,13 @@ spec:
               - fixed-percent
               - random-max-percent
               type: string
+            percent:
+              description: 'Percent defines the percentage of injection errors and
+                provides a number from 0-100. default: 100.'
+              type: string
             scheduler:
               description: Scheduler defines some schedule rules to control the running
-                time of the chaos experiment about time.
+                time of the chaos experiment about pods.
               properties:
                 cron:
                   description: "Cron defines a cron job rule. \n Some rule examples:
@@ -190,16 +164,15 @@ spec:
                 / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
                 provide a number from 0-100 to specify the percent of pods the server
-                can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
+                can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
                 from 0-100 to specify the max percent of pods to do chaos action
               type: string
           required:
-          - failKernRequest
+          - action
           - mode
           - selector
           type: object
         status:
-          description: Most recently observed status of the kernel chaos experiment
           properties:
             experiment:
               description: Experiment records the last experiment state.
@@ -269,8 +242,6 @@ spec:
           - experiment
           - phase
           type: object
-      required:
-      - spec
       type: object
   version: v1alpha1
   versions:
