--- a/images/chaos-dashboard/Dockerfile
+++ b/images/chaos-dashboard/Dockerfile
@@ -1,10 +1,17 @@
-FROM alpine:3.10
+FROM debian:buster-slim
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
+
+ENV http_proxy $HTTP_PROXY
+ENV https_proxy $HTTPS_PROXY
+
 ARG UI
 ARG SWAGGER
 
-RUN apk add tzdata --no-cache
+RUN apt-get update && apt-get install tzdata -y && rm -rf /var/lib/apt/lists/*
 
-COPY --from=pingcap/binary /src/bin/chaos-dashboard /usr/local/bin/chaos-dashboard
+ENV http_proxy=
+ENV https_proxy=
+
+COPY --from=pingcap/chaos-binary /bin/chaos-dashboard /usr/local/bin/chaos-dashboard
