--- a/images/chaos-mesh/Dockerfile
+++ b/images/chaos-mesh/Dockerfile
@@ -1,8 +1,8 @@
-FROM alpine:3.10
+FROM alpine:3.12
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
 
 RUN apk add tzdata --no-cache
 
-COPY --from=pingcap/binary /src/bin/chaos-controller-manager /usr/local/bin/chaos-controller-manager
+COPY --from=pingcap/chaos-binary /bin/chaos-controller-manager /usr/local/bin/chaos-controller-manager
