--- a/images/chaosfs/Dockerfile
+++ b/images/chaosfs/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.10
+FROM alpine:3.12
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
@@ -6,4 +6,4 @@ ARG HTTP_PROXY
 ENV TZ /etc/localtime
 RUN apk add --no-cache tzdata fuse
 
-COPY --from=pingcap/binary /src/bin/chaosfs /usr/local/bin/chaosfs
+COPY --from=pingcap/chaos-binary /bin/chaosfs /usr/local/bin/chaosfs
