--- a/examples/etcd/etcd-iochaos.yaml
+++ b/examples/etcd/etcd-iochaos.yaml
@@ -3,14 +3,16 @@ kind: IoChaos
 metadata:
   name: io-delay-example
 spec:
-  action: delay
+  action: latency
   mode: one
-  duration: "400s"
-  path: ""
+  path: "/var/run/etcd/**/*"
   selector:
     labelSelectors:
       app: etcd
-  layer: "fs"
+  volumePath: /var/run/etcd
   delay: "100ms"
+  percent: 50
+  duration: "400s"
   scheduler:
     cron: "@every 10m"
+
