--- a/images/chaos-daemon/Dockerfile
+++ b/images/chaos-daemon/Dockerfile
@@ -1,10 +1,18 @@
-FROM alpine:3.10
+FROM debian:buster-slim
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
 
-RUN apk add --no-cache tzdata iptables ipset stress-ng iproute2 util-linux
+ENV http_proxy $HTTP_PROXY
+ENV https_proxy $HTTPS_PROXY
 
-COPY --from=pingcap/binary /src/bin/chaos-daemon /usr/local/bin/chaos-daemon
-COPY --from=pingcap/binary /src/bin/pause /usr/local/bin/pause
-COPY --from=pingcap/binary /src/bin/suicide /usr/local/bin/suicide
+RUN apt-get update && apt-get install -y tzdata iptables ipset stress-ng iproute2 fuse util-linux && rm -rf /var/lib/apt/lists/*
+
+RUN update-alternatives --set iptables /usr/sbin/iptables-legacy
+
+ENV RUST_BACKTRACE 1
+
+COPY --from=pingcap/chaos-binary /bin/chaos-daemon /usr/local/bin/chaos-daemon
+COPY --from=pingcap/chaos-binary /bin/toda /usr/local/bin/toda
+COPY --from=pingcap/chaos-binary /bin/pause /usr/local/bin/pause
+COPY --from=pingcap/chaos-binary /bin/suicide /usr/local/bin/suicide
