add api for dns chaos
Signed-off-by: xiang <xiang13225080@163.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -82,6 +82,7 @@ rules:
     - stresschaos
     - podnetworkchaos
     - httpchaos
+    - dnschaos
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -150,6 +151,7 @@ rules:
   - stresschaos
   - podnetworkchaos
   - httpchaos
+  - dnschaos
   verbs: ["*"]
 ---
 kind: RoleBinding
