--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chaos-mesh-dashboard",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A Web UI for Chaos Mesh",
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "lodash.groupby": "^4.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^5.8.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -68,8 +69,10 @@
     "@types/yup": "^0.29.1",
     "http-proxy-middleware": "^1.0.4",
     "husky": "^4.2.5",
+    "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^10.1.7",
     "prettier": "^2.0.5",
+    "prettier-plugin-import-sort": "^0.0.4",
     "redux-logger": "^3.0.6"
   },
   "lint-staged": {
@@ -78,6 +81,12 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
+    }
+  },
+  "importSort": {
+    ".js, .ts, .tsx": {
+      "style": "eslint",
+      "parser": "typescript"
     }
   }
 }
