--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -120,34 +120,12 @@ subjects:
     name: {{ .Values.controllerManager.serviceAccount }}
     namespace: {{ .Release.Namespace }}
 
+---
 {{- if .Values.clusterScoped }}
----
-# binding for target namespace,working with cluster scoped mode.
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: {{ .Release.Name }}:chaos-controller-manager-target-namespace
-  namespace: {{ .Values.controllerManager.targetNamespace }}
-  labels:
-    app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: controller-manager
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ .Release.Name }}:chaos-controller-manager-target-namespace
-subjects:
-  - kind: ServiceAccount
-    name: {{ .Values.controllerManager.serviceAccount }}
-    namespace: {{ .Release.Namespace }}
-{{- end }}
-
-{{- if not .Values.clusterScoped }}
----
-# binding for target namespace, working with namespace scoped mode.
+{{- else }}
 kind: RoleBinding
+{{- end }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-target-namespace
@@ -166,5 +144,4 @@ subjects:
   - kind: ServiceAccount
     name: {{ .Values.controllerManager.serviceAccount }}
     namespace: {{ .Release.Namespace }}
-{{- end }}
 {{- end }}
