fix: remove rbac deprecation
Signed-off-by: vincent178 <vh7157@gmail.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -14,7 +14,7 @@ metadata:
 ---
 # roles
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-target-namespace
   labels:
@@ -44,7 +44,7 @@ rules:
 
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-cluster-level
   labels:
@@ -62,7 +62,7 @@ rules:
 
 ---
 kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-control-plane
   namespace: {{ .Release.Namespace }}
@@ -80,7 +80,7 @@ rules:
 ---
 # bindings cluster level
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-cluster-level
   labels:
@@ -101,7 +101,7 @@ subjects:
 ---
 # binding for control plane namespace
 kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-control-plane
   namespace: {{ .Release.Namespace }}
@@ -126,7 +126,7 @@ kind: ClusterRoleBinding
 {{- else }}
 kind: RoleBinding
 {{- end }}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}:chaos-controller-manager-target-namespace
   namespace: {{ .Values.controllerManager.targetNamespace }}
