--- a/.github/workflows/checklink.yaml
+++ b/.github/workflows/checklink.yaml
@@ -11,3 +11,6 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      with:
+        use-quiet-mode: 'yes'
+        config-file: 'checklink_config.json'
