update action file
Signed-off-by: xiang <xiang13225080@163.com>

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -4,6 +4,11 @@ on:
     branches:
       - master
       - release-1.0
+  pull_request:
+    branches:
+      - master
+      - release-1.0
+
 jobs:
   run:
     name: Upload
