add test framework and add test demo for network delay chaos
Signed-off-by: xiang <xiang13225080@163.com>

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -25,3 +25,7 @@ jobs:
       - name: Install Chaos Mesh
         run: |
           bash install.sh --local kind
+
+      - name: Run integration test
+        run: |
+          bash test/integration_test/run.sh
