--- a/.github/workflows/checklink.yaml
+++ b/.github/workflows/checklink.yaml
@@ -13,4 +13,4 @@ jobs:
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
         use-quiet-mode: 'yes'
-        config-file: 'checklink_config.json'
+        config-file: '.github/workflows/checklink_config.json'
