--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Chaos Mesh
         run: |
-          bash install.sh --local kind
+          bash install.sh --local kind --crd ./manifests/crd.yaml
 
       - name: Run integration test
         run: |
