--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
     "@reduxjs/toolkit": "^1.3.6",
+    "@types/lodash.get": "^4.4.6",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
     "d3": "^5.16.0",
@@ -17,6 +18,7 @@
     "js-yaml": "^3.14.0",
     "jsoneditor": "^9.0.3",
     "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
