--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -34,6 +34,7 @@ rules:
     verbs:
       - patch
       - create
+      - update
   - apiGroups: [ "" ]
     resources: [ "configmaps" ]
     verbs: [ "*" ]
