--- a/config/crd/bases/chaos-mesh.org_podchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_podchaos.yaml
@@ -36,7 +36,8 @@ spec:
           properties:
             action:
               description: 'Action defines the specific pod chaos action. Supported
-                action: pod-kill / pod-failure / container-kill Default action: pod-kill'
+                action: pod-kill / pod-failure / container-kill / pod-not-ready Default
+                action: pod-kill'
               enum:
               - pod-kill
               - pod-failure
