--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -26,7 +26,7 @@ metadata:
 rules:
   - apiGroups: [ "" ]
     resources: [ "pods" ]
-    verbs: [ "get", "list", "watch", "delete", "update" ]
+    verbs: [ "get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups:
       - ""
     resources:
@@ -34,6 +34,7 @@ rules:
     verbs:
       - patch
       - create
+      - update
   - apiGroups: [ "" ]
     resources: [ "configmaps" ]
     verbs: [ "*" ]
