support run as non-root
Signed-off-by: xiang <xiang13225080@163.com>

--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -61,9 +61,19 @@ spec:
             {{- end }}
           securityContext:
             privileged: true
+            #runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
             capabilities:
               add:
                 - SYS_PTRACE
+                #- SETGID
+                #- SETUID
+                #- SYS_ADMIN
+                #- FOWNER
+                #- CHOWN
+                #- DAC_OVERRIDE
+                #- FSETID
           volumeMounts:
             - name: socket-path
               {{- if eq .Values.chaosDaemon.runtime "docker" }}
@@ -73,6 +83,8 @@ spec:
               {{- end }}
             - name: sys-path
               mountPath: /sys
+            - name: etc-path
+              mountPath: /etc
           ports:
             - name: grpc
               containerPort: {{ .Values.chaosDaemon.grpcPort }}
@@ -97,6 +109,10 @@ spec:
             - !!str {{ .Values.bpfki.grpcPort }}
           securityContext:
             privileged: true
+            #runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
+            
           volumeMounts:
             - name: localtime-path
               mountPath: /etc/localtime
@@ -119,6 +135,9 @@ spec:
         - name: sys-path
           hostPath:
             path: /sys
+        - name: etc-path
+          hostPath:
+            path: /etc
 {{- if .Values.bpfki.create }}
         - name: localtime-path
           hostPath:
