--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,6 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
     "@reduxjs/toolkit": "^1.3.6",
-    "@types/lodash.get": "^4.4.6",
     "ace-builds": "^1.4.12",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
@@ -20,6 +19,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
+    "lodash.snakecase": "^4.1.1",
     "react": "^16.13.1",
     "react-ace": "^9.1.4",
     "react-dom": "^16.13.1",
@@ -62,7 +62,9 @@
     "@types/jest": "^25.2.1",
     "@types/js-yaml": "^3.12.4",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.get": "^4.4.6",
     "@types/lodash.groupby": "^4.6.6",
+    "@types/lodash.snakecase": "^4.1.6",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
