--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -68,6 +68,8 @@ spec:
                 - SYS_CHROOT
                 - SYS_ADMIN
                 - KILL
+                # CAP_IPC_LOCK is used to lock memory
+                - CAP_IPC_LOCK
           volumeMounts:
             - name: socket-path
               {{- if eq .Values.chaosDaemon.runtime "docker" }}
