feat: add primary API test
Signed-off-by: wanyoulc <15694528183@163.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -57,25 +57,31 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/axios-mock-adapter": "^1.10.0",
     "@types/d3": "^5.7.2",
     "@types/flat": "^5.0.1",
     "@types/jest": "^25.2.1",
     "@types/js-yaml": "^3.12.4",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.groupby": "^4.6.6",
+    "@types/mockjs": "^1.0.3",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
     "@types/yup": "^0.29.1",
+    "axios-mock-adapter": "^1.19.0",
+    "es-arguments": "^1.0.2",
     "http-proxy-middleware": "^1.0.4",
     "husky": "^4.2.5",
     "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^10.1.7",
+    "mockjs": "^1.1.0",
     "prettier": "^2.0.5",
     "prettier-plugin-import-sort": "^0.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "typescript-json-schema": "^0.43.0"
   },
   "lint-staged": {
     "*.(j|t)s?(x)": "prettier --write"
