--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -19,7 +19,8 @@
     "noEmit": true,
     "jsx": "react",
     "experimentalDecorators": true,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src"
