add env value in config
Signed-off-by: xiang <xiang13225080@163.com>

--- a/helm/chaos-mesh/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-deployment.yaml
@@ -77,6 +77,8 @@ spec:
           - name: PPROF_ADDR
             value: ":10081"
           {{- end }}
+          - name: CHAOS_DNS_SERVICE_NAME
+            value: {{ .Values.dnsServer.name }}
         volumeMounts:
           - name: webhook-certs
             mountPath: /etc/webhook/certs
