--- a/ui/package.json
+++ b/ui/package.json
@@ -61,6 +61,7 @@
     "@types/d3": "^5.7.2",
     "@types/flat": "^5.0.1",
     "@types/jest": "^25.2.1",
+    "@types/jest-expect-message": "^1.0.3",
     "@types/js-yaml": "^3.12.4",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.groupby": "^4.6.6",
@@ -76,6 +77,7 @@
     "http-proxy-middleware": "^1.0.4",
     "husky": "^4.2.5",
     "import-sort-style-eslint": "^6.0.0",
+    "jest-expect-message": "^1.0.2",
     "lint-staged": "^10.1.7",
     "mockjs": "^1.1.0",
     "prettier": "^2.0.5",
